--- a/auction-laravel/.env
+++ b/auction-laravel/.env
@@ -1,4 +1,4 @@
-APP_NAME=Auction
+APP_NAME=SaleSprint
 APP_ENV=local
 APP_KEY=base64:P88nKLP54h86s1gPQdVl72VPp5lmMMrLRsxFYuEzYGU=
 APP_DEBUG=true
@@ -39,8 +39,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=f6aa6490bcae28
-MAIL_PASSWORD=c19396bcb86239
+MAIL_USERNAME=df20e0730482ab
+MAIL_PASSWORD=362e2940e67129
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
